--- a/util/Makefile.objs
+++ b/util/Makefile.objs
@@ -9,8 +9,8 @@ util-obj-$(CONFIG_POSIX) += event_notifier-posix.o
 util-obj-$(CONFIG_POSIX) += mmap-alloc.o
 util-obj-$(CONFIG_POSIX) += oslib-posix.o
 util-obj-$(CONFIG_POSIX) += qemu-openpty.o
-util-obj-$(CONFIG_POSIX)$(CONFIG_EMSCRIPTEN) += qemu-thread-posix.o
-util-obj-$(CONFIG_EMSCRIPTEN) += qemu-thread-null.o
+util-obj-$(CONFIG_POSIX)$(CONFIG_NOTHREAD) += qemu-thread-posix.o
+util-obj-$(CONFIG_NOTHREAD) += qemu-thread-null.o
 util-obj-$(CONFIG_POSIX) += memfd.o
 util-obj-$(CONFIG_WIN32) += aio-win32.o
 util-obj-$(CONFIG_WIN32) += event_notifier-win32.o
